🚑 fix inline alignment for checkbox
 #194

--- a/src/checkboxGroup/theme.scss
+++ b/src/checkboxGroup/theme.scss
@@ -1,14 +1,12 @@
 :local(.checkbox-group) {
-  
-  .clearfix {
-    clear: both;
+  display: flex;
+  flex-direction: column;
+  &.inline {
+    flex-direction: row !important;
   }
 }
 
 :local(.each-check) {
-  &.inline {
-    float: left;
-    margin-right: 25px;
-  }
-  margin-bottom: 10px;
+  padding: 0.4em;
+  box-sizing: border-box;
 }
